--- a/src/main/app/src/app/app.component.html
+++ b/src/main/app/src/app/app.component.html
@@ -1,2 +1,6 @@
 <h1>{{title}}</h1>
-<heroes></heroes>
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Dashboard</a>
+</nav>
+<router-outlet></router-outlet>
