--- a/src/main/app/src/app/hero-detail.component.html
+++ b/src/main/app/src/app/hero-detail.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="hero">
   <h2>{{hero.name}} Details!</h2>
+  <button (click)="goBack()">Back</button>
   <div><label>id: </label>{{hero.id}}</div>
   <div><label>name: </label><input [(ngModel)]="hero.name" placeholder="name"></div>
 </div>
