--- a/src/main/app/src/app/app.component.html
+++ b/src/main/app/src/app/app.component.html
@@ -2,5 +2,6 @@
 <nav>
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/master">Master!</a>
 </nav>
 <router-outlet></router-outlet>
