--- a/src/main/app/src/app/app.component.html
+++ b/src/main/app/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/master">Master!</a>
+  <a routerLink="/version">Version</a>
 </nav>
 <router-outlet></router-outlet>
