adding eventemitter example

--- a/src/main/app/src/app/hero-child.component.html
+++ b/src/main/app/src/app/hero-child.component.html
@@ -1,2 +1,3 @@
 <h2>{{hero.name}} says:</h2>
 <p>I, {{hero.name}} at your service, {{hero.masterName}}</p>
+<p>Am I good?</p><hero-voter (onVoted)="voted($event)"></hero-voter>
